--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Crossjig</title>
-    <meta name="description" content="A spatial word game" />
+    <meta name="description" content="A jigsaw word puzzle" />
     <link rel="icon" href="assets/favicon.ico" sizes="any" />
     <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
     <link rel="manifest" href="assets/manifest.json" />
