--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,7 @@
     ></script>
     <script>
       const host = window.location.hostname;
-      if(host != "localhost")
-      {
+      if (host != "localhost") {
         window.dataLayer = window.dataLayer || [];
         function gtag() {
           dataLayer.push(arguments);
